--- a/SICP/SubForms/FrmCimento.resx
+++ b/SICP/SubForms/FrmCimento.resx
@@ -117,7 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="MenuStrip_Operacoes.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAABCwAAAA0CAYAAABB2Kl1AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGTSURBVHhe7dvBCYAwFAXB9F9P+lM8RBDvZoUZyOGlhIU/
+        AAAAALLmnMd6tm3btm3btm3btm3bX+/1d3t9AAAAAGzwaBSCBQAAAFAgWAAAAAA5GgUAAADQpl4AAAAA
+        BU5CAAAAgBzBAgAAAMjRKAAAAIA29QIAAAAocBICAAAA5AgWAAAAQI5GAQAAALSpFwAAAECBkxAAAAAg
+        R7AAAAAAcjQKAAAAoE29AAAAAAqchAAAAAA5ggUAAACQo1EAAAAAbeoFAAAAUOAkBAAAAMgRLAAAAIAc
+        jQIAAABoUy8AAACAAichAAAAQI5gAQAAAORoFAAAAECbegEAAAAUOAkBAAAAcgQLAAAAIEejAAAAANrU
+        CwAAAKDASQgAAACQI1gAAAAAORoFAAAA0KZeAAAAAAVOQgAAAIAcwQIAAADI0SgAAACANvUCAAAAKHAS
+        AgAAAOQIFgAAAECORgEAAAC0qRcAAABAgZMQAAAAIEewAAAAAHIECwAAAOAfrnCxnm3btm3btm3btm3b
+        9o4NAAAAEDTGCTyiQ0/HqKjbAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="bunifuButton1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAHUAAAAkCAYAAAC31nXuAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -170,19 +186,6 @@
   </data>
   <data name="bunifuLabel2.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 10pt; width: 100%; height: 100%; font-style: normal; font-weight: bold; text-decoration: none; color: rgb(0, 0, 0); text-align: left; }</value>
-  </data>
-  <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAABCwAAAAxCAYAAAARFTjGAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGBSURBVHhe7dvBCYAwFAXB9F9P+lNyCBi8hz3MgOizhIU/
-        AAAAALLmnM96vt+2bdu2bdu2bdu2bdu3NgAAAEDSES+UDAAAAKBAsAAAAADaBAsAAACgQKMAAAAAcpyE
-        AAAAADmCBQAAANAmWAAAAAAFGgUAAACQ4yQEAAAAyBEsAAAAgDbBAgAAACjQKAAAAIAcJyEAAABAjmAB
-        AAAAtAkWAAAAQIFGAQAAAOQ4CQEAAAByBAsAAACgTbAAAAAACjQKAAAAIMdJCAAAAJAjWAAAAABtggUA
-        AABQoFEAAAAAOU5CAAAAgBzBAgAAAGgTLAAAAIACjQIAAADIcRICAAAA5AgWAAAAQJtgAQAAABRoFAAA
-        AECOkxAAAAAgR7AAAAAA2gQLAAAAoECjAAAAAHKchAAAAAA5ggUAAADQJlgAAAAABRoFAAAAkOMkBAAA
-        AMgRLAAAAIA2wQIAAAAo0CgAAACAnF+wWD/2z/1t27Zt27Zt27Zt27Z9c683AAAAQNAYL6lQKncwAJXW
-        AAAAAElFTkSuQmCC
-</value>
   </data>
   <data name="bunifuButton3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
