--- a/SICP/SubForms/FrmCimento.resx
+++ b/SICP/SubForms/FrmCimento.resx
@@ -117,59 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="MenuStrip_Operacoes.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>189, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAABCwAAAA0CAYAAABB2Kl1AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGTSURBVHhe7dvBCYAwFAXB9F9P+lM8RBDvZoUZyOGlhIU/
-        AAAAALLmnMd6tm3btm3btm3btm3bX+/1d3t9AAAAAGzwaBSCBQAAAFAgWAAAAAA5GgUAAADQpl4AAAAA
-        BU5CAAAAgBzBAgAAAMjRKAAAAIA29QIAAAAocBICAAAA5AgWAAAAQI5GAQAAALSpFwAAAECBkxAAAAAg
-        R7AAAAAAcjQKAAAAoE29AAAAAAqchAAAAAA5ggUAAACQo1EAAAAAbeoFAAAAUOAkBAAAAMgRLAAAAIAc
-        jQIAAABoUy8AAACAAichAAAAQI5gAQAAAORoFAAAAECbegEAAAAUOAkBAAAAcgQLAAAAIEejAAAAANrU
-        CwAAAKDASQgAAACQI1gAAAAAORoFAAAA0KZeAAAAAAVOQgAAAIAcwQIAAADI0SgAAACANvUCAAAAKHAS
-        AgAAAOQIFgAAAECORgEAAAC0qRcAAABAgZMQAAAAIEewAAAAAHIECwAAAOAfrnCxnm3btm3btm3btm3b
-        9o4NAAAAEDTGCTyiQ0/HqKjbAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAABJ0AAAA0CAYAAAAg7ElyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGYSURBVHhe7dqxCcNAEEVB9V/P9Wej4AIjHBw8wQYzINCT
+        OvjsBQAAAACvWWt99qO11lprrbXWWmut9Wk//P0BAAAAAAd+diajEwAAAAAFoxMAAAAAAAAAADCfSycA
+        AAAAckYnAAAAAHJGJwAAAAAAAAAAYD6XTgAAAADkjE4AAAAA5IxOAAAAAAAAAADAfC6dAAAAAMgZnQAA
+        AADIGZ0AAAAAAAAAAID5XDoBAAAAkDM6AQAAAJAzOgEAAAAAAAAAAPO5dAIAAAAgZ3QCAAAAIGd0AgAA
+        AAAAAAAA5nPpBAAAAEDO6AQAAABAzugEAAAAAAAAAADM59IJAAAAgJzRCQAAAICc0QkAAAAAAAAAAJjP
+        pRMAAAAAOaMTAAAAADmjEwAAAAAAAAAAMJ9LJwAAAAByRicAAAAAckYnAAAAAAAAAABgPpdOAAAAAOSM
+        TgAAAADkjE4AAAAAAAAAAMB8Lp0AAAAAyBmdAAAAAMgZnQAAAAAAAAAAgPkex033h/1xv2uttdZaa621
+        1lprfdL3OwAAAAC84Lq+Ee1KCpRQ2RwAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="MenuStrip_Operacoes.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="bunifuButton1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAHUAAAAkCAYAAAC31nXuAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAB8SURBVHhe7dwxDcAwEATBQDOzN/PELkJiNScNgu3vmZl1
-        bDLWjbrPXhpuT1FjRA0SNUjUIFGDRA0SNUjUIFGDRA0SNUjUIFGDRA0SNUjUIFGDRA0SNUjUIFGDRA0S
-        NUjUIFGDRA0SNUjUIFGDRA0SNUjUIFGD/qjuAVJmfX0beYltXfLmAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAAAgCAYAAADkK90uAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG2SURBVGhD7ZqhcsJAEIYjK5GRfQRkZB4BGRmJROJyb4Dk
+        ESqRyEpkZWVlZSWy/TfZTMh1S5sQNhX/P/N1hu7eMrP/7IXcXDJGVVVlIAclCKSH9ER6k2u7pheKp2Ad
+        QjiCTzKIE3q3BY/azvFCkQVAzXC++AIynj36mWp7hwkLcxT4iAqS2zmjt4W2+W/CglIWRoXIhMjOo+2+
+        LjXDLEImZ6dtt6XbFCfDEfR8re3vC4EUCXxm+CPPlKXa0AmBXZRI/DioDY10OrhVzUhvSvBhayURV/Zq
+        R71dnaIg8ee9NgPTsTCCZAbqbQt/MitI/IEXhRiysoLEH3ixEUM2VpD4Ay8Cf2H9I1pDCitI/JHhEEPk
+        /MpMIL7Ai1IMkbd0M4H4Ai+y+l0EH97iIHFHDhkfWkN4sDg/3QEjnFkaCcQReLBSOxrhn4c4ibjxojZ0
+        4pTMx7fpaIUAXxL96Y7dLSHhKVpA7odcomt+Wf0kSUAiTbk/YsZC2/67kIw1ZiFyO3KD8fpkWMIiOVZ5
+        joqR8byip/YDfIikCIrJNsaLEOM4ooeltnNaydQAuc1tXcUnfaRXA7amJPkCUWKy+4rQf5IAAAAASUVO
+        RK5CYII=
 </value>
   </data>
-  <data name="bunifuTextBox3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="txt_LucroApurado.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAIUAAAAoCAYAAADQWDkMAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACTSURBVHhe7dKxDQIxAARB91+VXy6DMigAZOEAtHTwM9Il
-        F++Av9Zajznny+693cFJYox9wO7gJCEKPkRBiIIQBSEKQhSEKAhREKIgREGIghAFIQpCFIQoCFEQoiBE
-        QYiCEAUhCkIUhCgIURCiIERBiIIQBSEKQhSEKAhREKIgREGIgviJ4rqu5z7s3tsdnCTg2xhvtv2Hz+hA
-        Us8AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAIQAAAAtCAYAAABvV8OBAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGQSURBVHhe7dyxSsNQFIfxO3b0ERwdfRJnH8HFZxF8Bl/B
+        1TZpU7t3sFOLUJEagkSIoYYSz6kX5G/BB+j9fnCHNul0PkK6nAD8azgcXhZF8TAej8vRaNRzju/4bG3G
+        jzbrqzj2Q3bxxG+az+d1WZZ927Y9jpPPtqqqfrFYNJPJ5Mlmfxoz+OUxbDab+BOkoq7r3mb/bFEMYgoh
+        5Hl+bbV8xHuQmOVy2VoUtzGHn6eDP0KQpqZp/L3iJeYQQpZln13XxctIkb9sxhxC8A9IG0FAEAQEQUAQ
+        BARBQBAEBEFAEAQEQUAQBARBQBAEBEFAEAQEQUAQBARBQBAEBEFAEAQEQUAQBARBQBAEBEFAEAQEQUAQ
+        BARBQBAEhASRZVm32+3iJaRIgvDFU75rCGnabrd9nud1zGEfxM1qtWKFTKJ82VxRFPcxh/1KwoFF8coq
+        wvT4q8J0On0/WE1oX5xbJW/r9fqLfVPHz0PwfaSz2ayyh8FFzEBZFL689M6XkPlLBud4j/+RsFk/2MzP
+        4viBv0L4BgemveewsqQVAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="bunifuLabel7.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 10pt; width: 100%; height: 100%; font-style: normal; font-weight: bold; text-decoration: none; color: rgb(46, 139, 87); text-align: left; }</value>
   </data>
-  <data name="bunifuTextBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="txt_QtdeVendidos.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAL8AAAAmCAYAAACVg0qNAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACeSURBVHhe7dKxCcQwAARB9V+VhMr4MlyAjUDJ17AzcMnF
-        OyBt7/2bc75mhZ3eb/pjnAMqTu83ffHTIn6yxE+W+MkSP1niJ0v8ZImfLPGTJX6yxE+W+MkSP1niJ0v8
-        ZImfLPGTJX6yxE+W+MkSP1niJ0v8ZImfLPGTJX6yxE+W+MkSP1niJ0v8ZImfLPGT9Rf/Wus5h1lhp/eb
-        PhSN8QFZWqI7nwvStgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAANQAAAAtCAYAAADWQ0XJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG0SURBVHhe7d2xSsNQFIfxOzr2ETo6+iTOPoKLzyL4DL6C
+        q23SpnbvYKcWoSI1FIkQQw0lnmMvSKlIU/5u3w/O0CQdPy7JcgKAf9Tr9S6yLLsfDAZ5v99vGIbZHW/D
+        GnmwVi5jNvvsZscfmkwmRZ7nTVVVDYB93sZqtWqm02k5HA4frZ1uzOiHx7RcLuNfAByiKIrG2nmyqE5i
+        SiGkaXpltb3HZwC0MJvNKovqJua0PZ38CAPQXlmW/l71HHMKIUmSj7qu420AbfnHiphTCP4DwPEIChAi
+        KECIoAAhggKECAoQIihAiKAAIYIChAgKECIoQIigACGCAoQIChAiKECIoAAhggKECAoQIihAiKAAIYIC
+        hAgKECIoQIigACGCAoQIChAiKECIoAAhggKECAoQIihAaCeoJEnqzWYTbwFoaycoX7zru0IBtLder5s0
+        TYuY03dQ1/P5nBWGwBF82XuWZXcxpxB8g7VF9eLr4gEczl+VRqPRmzXUjTlt2YUzq+x1sVh8sm8X+JuH
+        lOd5Mx6PV3YYnceMdllUHYvq1pdY+0sWwzC/j3/Is1burZnTmA8ArRC+ALHf1SLtOtyqAAAAAElFTkSu
+        QmCC
 </value>
   </data>
-  <data name="bunifuTextBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="txt_TotalVendido.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAIUAAAAoCAYAAADQWDkMAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACTSURBVHhe7dKxDQIxAARB91+VXy6DMigAZOEAtHTwM9Il
-        F++Av9Zajznny+693cFJYox9wO7gJCEKPkRBiIIQBSEKQhSEKAhREKIgREGIghAFIQpCFIQoCFEQoiBE
-        QYiCEAUhCkIUhCgIURCiIERBiIIQBSEKQhSEKAhREKIgREGIgviJ4rqu5z7s3tsdnCTg2xhvtv2Hz+hA
-        Us8AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAIUAAAAtCAYAAACAlai/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGPSURBVHhe7dyxSsNQFIfxO3b0ERwdfRJnH8HFZxF8Bl/B
+        1TZpU7t3sFOLUJEagkSIoYYSz6kXpPwF997vB3dok07nI6TLCcC/hsPhZVEUD+PxuByNRj3nOI/P1+b8
+        aPO+iqNXdvHEb5rP53VZln3btj2Ol8+3qqp+sVg0k8nkyeZ/GlP45UFsNpv4E6Skruve5v9sYQxiDiHk
+        eX5txXzEe5Cg5XLZWhi3MYmfp4Q/SpCupmn8PeMlJhFClmWfXdfFy0iVv4DGJELwDwBRQBAFBFFAEAUE
+        UUAQBQRRQBAFBFFAEAUEUUAQBQRRQBAFBFFAEAUEUUAQBQRRQBAFBFFAEAUEUUAQBQRRQBAFBFFAEAUE
+        UUAQBcRBFFmWdbvdLl5Cqg6i8EVYvvcI6dput32e53VMYh/FzWq1YpVNwnwJXlEU9zGJ/brEgYXxyprE
+        NPmrw3Q6fZe1ifbFuZXytl6vv9h/lQaPwXemzmazyh4KFzGFQxaGL1i988Vo/tLBOe7jfzBs3g8297OY
+        APCXEL4B4j9n0CsX2wAAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="bunifuLabel6.BaseStylesheet" xml:space="preserve">
@@ -190,17 +212,30 @@
   <data name="bunifuButton3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAHUAAAAkCAYAAAC31nXuAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAB+SURBVHhe7dyxCcAwEARBlabS1M2jKm0MrmKZYIKLN781
-        M/vee2j4eq5/PGQcUXtEDRI1SNQgUYNEDRI1SNQgUYNEDRI1SNQgUYNEDRI1SNQgUYNEDRI1SNQgUYNE
-        DRI1SNQgUYNEDRI1SNQgUYNEDRI1SNQgUYOOe4CYmdkvK7llLz50ylMAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH7SURBVHhe7ZstbMJQFIUrJycnJycnJ5GTSCQSiUTWIZGT
+        VQ0UU4mcnJycRCKRldu5r5c0K5clLQN6m3OSDxLeH3kn9/31NTpH6/X6eblcDsA4y7KYnIf0o/TnarV6
+        0S6+vKQxMEfDn/gT3+SyoK+/8L0Ar2rB/0mjkUbeli1MHqol7YXh9QGV5bXKyW15T9P0SS1qJpkvUcG2
+        ViHpABg1942jVgqgcFGvjHQLmDtTy/6WRigNdQICcKTW2dI5lEOuLwoYe3oLhAxcFPlkmyTJndpYSedR
+        qwBxAPybqpWVuA/1Dfzb/YpW/DCwMhJ3TNTSMJfKUZSViTgCQ/BGLQ2mcsXbD4o8z+8P2xgrA3GITKXh
+        yYuVSHwCU8fcyvQMmDoTU6dWInFLLNuZmZFA/BJLpI6MBOKXEKk8eOgRYaGEj0crkbilvM8EY/dGInGI
+        BGkwFfNqYmUg7vgIhoq4WOoNsVoaRfLIBmG7MzIRPxRy5KuWluIhhHsWamUljVY+KPfJcZQehGiVw33e
+        JHQGgnGsFtpCpkm9EOk0x8OuJTj/ZhQmHQMj68a8RXhKXDh1Gwm8RoYeBGOHKMzTpm4ha57qglkbyZ0X
+        mDvXyqxGyJWQ6Dy5ym0jvcskbztz23NFEFDhxWP0e3mmeylJAzI0ozHzNXdyPtK/7d5DjaIfl3hgR+t6
+        +8EAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="bunifuButton2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAHUAAAAkCAYAAAC31nXuAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAB/SURBVHhe7dwxDYAwAADBSqsrGOuycoAmqLj8cAp+/zGu
-        PT8rjHmirnHvJ4jTs6iYooKKCioqqKigooKKCioqqKigooKKCioqqKigooKKCioqqKigooKKCioqqKig
-        ooKKCioqqKigooKKCioqqKigooKKCioqqKigP2p7AMqeLwZkVYSoZs7xAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHnSURBVHhe7ZutU8NAEMVPIpFIJBKJrEQikUgkopMPTHFI
+        JJI/AYlEImtySV0lEomEe5cL08KmTJK2yWbem/lNxV3uZrLd3N7unemk2+zUxMXEceW4I53Be5yYKD8L
+        b3gPwmRJce8mnrvfL7JjIluYtHgwSXYeLLBFld5IQ/aKXZrUXgSLdNA0O3LGfJYnIf1gX026OAkWaiis
+        l/h3iAOTXomLj+Zeiwci+ykOSIZDnCfBYv8IHkqD6iHKL4PlaoQ1lJ9cXcABN26BGBQpxTnibHkQrLgi
+        rKPiA0QH+U2w5Iq4D9XO+7q3IrkgdySqsNfBok4+FSV1IqqI8pdgUSdGvOMAkfBsfhi2MUIHohMspaHy
+        Incg+kD5jluZkeFTh9jfSI1EJyi2e8tKjUQn3qhICEuNRCelpzLxMCp8oBQXx2IjUUp1ngmVdLEDUQec
+        1CuxT2IHoo230qAQg6Vx4IOkSijZoHQjdSQ6QN4XKd81MQmhG1Ta/gjeykK5TkQvrYTkPk8S6sPvTTcJ
+        1XPpQTJMxM+upGjxKA5AhgVOOoinCOvEwGnYwPEaGbQSaq3MNg0LH/OsHjBrI5x5wZ1UBlD9A++sjXLb
+        CIOVt5257dkn1cXjn5zuroQJyk/z7+vtZFvg/ba6h2rMN3meAkyceAP+AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="bunifuSeparator1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -212,5 +247,21 @@
   </data>
   <data name="bunifuLabel1.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 16pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(105, 105, 105); text-align: left; }</value>
+  </data>
+  <data name="txt_TotalLiquido.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIUAAAAtCAYAAACAlai/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGPSURBVHhe7dyxSsNQFIfxO3b0ERwdfRJnH8HFZxF8Bl/B
+        1TZpU7t3sFOLUJEagkSIoYYSz6kXpPwF997vB3dok07nI6TLCcC/hsPhZVEUD+PxuByNRj3nOI/P1+b8
+        aPO+iqNXdvHEb5rP53VZln3btj2Ol8+3qqp+sVg0k8nkyeZ/GlP45UFsNpv4E6Skruve5v9sYQxiDiHk
+        eX5txXzEe5Cg5XLZWhi3MYmfp4Q/SpCupmn8PeMlJhFClmWfXdfFy0iVv4DGJELwDwBRQBAFBFFAEAUE
+        UUAQBQRRQBAFBFFAEAUEUUAQBQRRQBAFBFFAEAUEUUAQBQRRQBAFBFFAEAUEUUAQBQRRQBAFBFFAEAUE
+        UUAQBcRBFFmWdbvdLl5Cqg6i8EVYvvcI6dput32e53VMYh/FzWq1YpVNwnwJXlEU9zGJ/brEgYXxyprE
+        NPmrw3Q6fZe1ifbFuZXytl6vv9h/lQaPwXemzmazyh4KFzGFQxaGL1i988Vo/tLBOe7jfzBs3g8297OY
+        APCXEL4B4j9n0CsX2wAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="lbTotalLiquido.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 10pt; width: 100%; height: 100%; font-style: normal; font-weight: bold; text-decoration: none; color: rgb(46, 139, 87); text-align: left; }</value>
   </data>
 </root>
